# OpenClaw2026_Lynx_LaporKita

./: .env.example  .gitignore  LICENSE  README.md  lapor_portal_mock.json  nixpacks.toml  pyproject.toml  rasain_store.json  render.yaml  requirements.txt  vercel.json
agent/: __init__.py  config.py  models.py  orchestrator.py  store.py
agent/tools/: __init__.py  classifier.py  doku.py  email_gov.py  geolocator.py  intake.py  lapor_portal.py  memory.py  reward.py  solana_token.py  telegram.py
api/: __init__.py  main.py
data/seed/: instansi_kategori_indonesia.json  kota_indonesia_top10.json
docs/: ARCHITECTURE.md  DEVPOST_SUBMISSION.md  VIDEO_SCRIPT.md  pitchdeck.html
scripts/: demo.py  seed_demo.py  setup_solana.py
web/: package-lock.json
web/app/: layout.tsx  page.tsx
web/app/dashboard/: page.tsx
web/app/lapor/: page.tsx
web/app/saya/: page.tsx
web/lib/: api.ts
