[project]
name = "laporkita"
version = "0.1.0"
description = "AI Civic Reporting Agent for Indonesia with Web3 Reward Layer (OpenClaw Agenthon 2026)"
authors = [
    {name = "Pugar Huda Mantoro (Lynx)", email = "pugarhudam@gmail.com"}
]
requires-python = ">=3.11"
license = {text = "MIT"}
readme = "README.md"

dependencies = [
    # Core AI
    "anthropic>=0.40",
    "claude-agent-sdk>=0.1.81",
    "mcp>=1.0",

    # Backend API
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.6",
    "websockets>=12.0",

    # Data & validation
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",

    # HTTP
    "httpx>=0.27",

    # Scheduling (autonomous loop)
    "apscheduler>=3.10",

    # Vision / image
    "pillow>=10.0",

    # Solana / Web3 reward layer
    "solana>=0.34",
    "solders>=0.21",
    "anchorpy>=0.20",

    # Persistence
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",

    # Notif
    "fonnte-python>=0.1.0; python_version >= '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
    "ipython>=8.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent", "api"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
